# Pier-X

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  README.en.md  README.md  build.ps1  build.sh  crash_log.txt  index.html  package-lock.json  package.json  run.ps1  run.sh  vite.config.ts
freerdp-sys/: Cargo.toml  build.rs  wrapper.h
freerdp-sys/examples/: smoke.rs
freerdp-sys/src/: lib.rs
pier-core/: CMakeLists.txt  Cargo.toml  README.md
pier-core/include/: pier_connections.h  pier_control_master.h  pier_core.h  pier_credentials.h  pier_docker.h  pier_git.h  pier_local.h  pier_log.h  pier_markdown.h  pier_mysql.h  pier_postgres.h  pier_redis.h  pier_search.h  pier_server_monitor.h  pier_services.h  pier_sftp.h  pier_sqlite.h  pier_ssh_session.h  pier_terminal.h  pier_tunnel.h
pier-core/resources/completions/: apt-get.json  awk.json  bat.json  cargo.json  chmod.json  chown.json  cp.json  curl.json  df.json  dig.json  docker.json  du.json  fd.json  find.json  free.json  gh.json  git.json  grep.json  hostname.json  ip.json  journalctl.json  jq.json  kill.json  kubectl.json  ln.json  ls.json  lsof.json  make.json  mkdir.json  mv.json  mvn.json  nano.json  netstat.json  node.json  npm.json  ping.json  pip.json  pip3.json  pnpm.json  ps.json  (+12 more)
pier-core/src/: connections.rs  credentials.rs  db_connections.rs  ffi.rs  git_graph.rs  lib.rs  local_secret_store.rs  logging.rs  markdown.rs  paths.rs  preview.rs  process_util.rs  settings.rs  sql_guard.rs  sudo.rs  updates.rs
pier-core/src/egress/: dns.rs  forwarder.rs  http_connect.rs  mod.rs  none.rs  socks5.rs  vpn_subprocess.rs
pier-core/src/ffi/: connections.rs  control_master.rs  core.rs  credentials.rs  docker.rs  git.rs  local_exec.rs  log_stream.rs  markdown.rs  mod.rs  mysql.rs  postgres.rs  redis.rs  search.rs  server_monitor.rs  services.rs  sftp.rs  sqlite.rs  ssh_session.rs  terminal.rs  tunnel.rs
pier-core/src/remote_desktop/: cert_pins.rs  error.rs  frame.rs  input.rs  mod.rs  rdp.rs  rdp_freerdp.rs  vnc.rs
pier-core/src/services/: apache.rs  caddy.rs  code_search.rs  compose_k8s.rs  db_tls.rs  docker.rs  firewall.rs  git.rs  host_health.rs  influx.rs  local_exec.rs  local_monitor.rs  mod.rs  mysql.rs  mysql_cli.rs  nanolink.rs  nginx.rs  package_manager.rs  package_mirror.rs  postgres.rs  postgres_cli.rs  redis.rs  remote_db_cli.rs  search.rs  server_monitor.rs  sqlite.rs  sqlite_remote.rs  sqlserver.rs  web_server.rs  webhook.rs
pier-core/src/ssh/: channel.rs  config.rs  control_master.rs  db_detect.rs  error.rs  exec_stream.rs  known_hosts.rs  mod.rs  runtime.rs  service_detector.rs  session.rs  sftp.rs  sftp_parallel.rs  tunnel.rs
pier-core/src/terminal/: completions.rs  emulator.rs  history.rs  integration.rs  library.rs  man.rs  mod.rs  pty.rs  session.rs  smart.rs  ssh_watcher.rs  validate.rs
pier-core/tests/: integration_db.rs  terminal_end_to_end.rs
pier-ui-gpui/: .gitignore  Cargo.toml  PARALLEL-DEV.md  app.rc  build.rs  rust-toolchain.toml
pier-ui-gpui/assets/app-icons/: icon.icns
pier-ui-gpui/locales/: app.yml
pier-ui-gpui/prompts/: panel-db.md  panel-docker.md  panel-firewall.md  panel-logs.md  panel-markdown.md  panel-search.md  panel-sftp.md  panel-software.md  panel-webserver.md
pier-ui-gpui/scripts/: capture.ps1  click.ps1
pier-ui-gpui/src/: assets.rs  data.rs  diagnostics.rs  dialogs.rs  git_panel.rs  i18n.rs  main.rs  settings.rs  shell.rs  terminal.rs  theme.rs  ui.rs  ui_kit.rs
pier-ui-gpui/src/app/: actions.rs  db_session.rs  git_session.rs  keybindings.rs  layout.rs  mod.rs  route.rs  shell_location.rs  ssh_session.rs  state.rs  statusbar.rs  toolbar.rs  workbench.rs
pier-ui-gpui/src/components/: assist_strip.rs  button.rs  card.rs  commit_composer.rs  commit_graph.rs  context_menu.rs  data_cell.rs  dropdown.rs  form_field.rs  icon_badge.rs  icon_button.rs  inline_input.rs  inspector_section.rs  meta_line.rs  mod.rs  nav_item.rs  page_header.rs  page_toolbar.rs  pill_cluster.rs  property_row.rs  section_label.rs  separator.rs  setting_row.rs  split_button.rs  status_pill.rs  tabs.rs  text.rs  toggle_row.rs  transfer_toast.rs
pier-ui-gpui/src/data/: file_icon.rs  file_meta.rs  mod.rs  snapshot.rs
pier-ui-gpui/src/panels/: db.rs  docker.rs  firewall.rs  logs.rs  markdown.rs  mod.rs  search.rs  sftp.rs  software.rs  webserver.rs
pier-ui-gpui/src/platform/: accent.rs  mod.rs  window_chrome.rs
pier-ui-gpui/src/theme/: colors.rs  heights.rs  mod.rs  radius.rs  shadow.rs  spacing.rs  terminal.rs  typography.rs
pier-ui-gpui/src/views/: add_group.rs  dashboard.rs  database.rs  database_form.rs  docker_dialogs.rs  edit_connection.rs  file_tree.rs  git.rs  git_dialogs.rs  left_panel.rs  left_panel_view.rs  markdown.rs  mod.rs  new_tab_chooser.rs  path_inspector.rs  right_panel.rs  settings_dialog.rs  ssh.rs  (+5 more)
pier-ui-qt/: CMakeLists.txt
pier-ui-qt/i18n/: pier-x_zh_CN.ts
pier-ui-qt/qml/: Main.qml  Theme.qml
pier-ui-qt/src/: PierConnectionStore.cpp  PierConnectionStore.h  PierControlMasterHandle.cpp  PierControlMasterHandle.h  PierCoreBridge.cpp  PierCoreBridge.h  PierCredentials.cpp  PierCredentials.h  PierDockerClient.cpp  PierDockerClient.h  PierGitClient.cpp  PierGitClient.h  PierI18n.cpp  PierI18n.h  PierLocalSystem.cpp  PierLocalSystem.h  PierLogStream.cpp  PierLogStream.h  PierMarkdown.cpp  PierMarkdown.h  PierMySqlClient.cpp  PierMySqlClient.h  PierMySqlWorkspace.cpp  PierMySqlWorkspace.h  PierNativeWindow.h  PierNativeWindow_mac.mm  PierNativeWindow_win.cpp  PierPostgresClient.cpp  PierPostgresClient.h  PierProfiler.cpp  PierProfiler.h  PierRedisClient.cpp  PierRedisClient.h  PierSearch.cpp  PierSearch.h  PierServerMonitor.cpp  PierServerMonitor.h  PierServiceDetector.cpp  PierServiceDetector.h  PierSftpBrowser.cpp  (+20 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  git_panel.rs  lib.rs  main.rs  remote_desktop.rs  ssh_cred_cache.rs  ssh_mux.rs  terminal_smart.rs
tools/pier-x-completions-importer/: Cargo.toml
(+414 files in other folders)
