[package]
name = "freerdp-sys"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "FFI bindings to a vendored, source-built libfreerdp3 (MS-RDPEGFX H.264/AVC444) for Pier-X"
# The vendored FreeRDP tree is a git submodule, not crate source — exclude it
# from any future `cargo package` run so we never try to ship ~75 MB of C.
exclude = ["vendor/FreeRDP/**"]
links = "freerdp3"

# Raw -sys bindings: no doctests, and the crate is meaningless without its
# build script linking the native library.
[lib]
doctest = false

# This crate is an OPTIONAL dependency of pier-core, pulled in only when its
# `rdp-freerdp` feature is on. So the optional-dependency edge is the gate:
# the default Pier-X build never compiles this crate, never invokes cmake or
# bindgen, and never builds the vendored C. When it IS compiled, build.rs runs
# the full native build unconditionally.
[build-dependencies]
cmake = "0.1"
bindgen = "0.71"
