[package]
name = "pier-core"
version = "0.1.0"
edition = "2021"
description = "Cross-platform core engine for Pier-X — terminal, SSH, RDP, VNC, databases"
license = "MIT"
repository = "https://github.com/chenqi92/Pier-X"

[lib]
name = "pier_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"

# Serialization (for config / IPC)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform credential storage
keyring = "3"

# Cross-platform paths
directories = "5"

# Terminal emulation — VT100 / ANSI parser (cross-platform, pure Rust)
vte = "0.15"

# SSH client. `russh` drives an async SSH session (TCP handshake,
# key exchange, authentication, channels, port forwarding). The
# `Pty` trait in terminal::pty is synchronous, so the ssh module
# bridges the two worlds via a shared multi-thread tokio runtime
# behind a `OnceLock`. Default features pull aws-lc-rs for crypto
# (portable across Apple Silicon / x86_64 / Windows ARM64).
russh = { version = "0.60", features = ["async-trait"] }

# SFTP subsystem on top of russh. Gives us read_dir / open /
# read / write / mkdir / remove / rename without us having to
# reimplement the SFTP protocol framing. Only the client half
# is used by pier-x today.
russh-sftp = "2.1"

# Redis client. M5a adds a Redis browser panel as the first
# per-service tool. `tokio-comp` pulls in async IO on our shared
# tokio runtime; `connection-manager` gives us transparent
# reconnect if the tunnel flaps. No TLS features — we connect
# through the SSH tunnel, so traffic is already encrypted.
redis = { version = "1.2", default-features = false, features = [
    "tokio-comp", "connection-manager", "acl", "script",
] }

# PostgreSQL client for the M7a panel. `tokio-postgres` is
# the canonical async PG client in the Rust ecosystem. Default
# features pull in `runtime` (tokio net+time) which we already
# have via the shared runtime. No TLS — same rationale as MySQL
# and Redis: the SSH tunnel encrypts the transport.
tokio-postgres = "0.7"

# Git graph engine — libgit2 binding for in-process ref
# decoration, revwalk, tree diff, and branch enumeration.
# The heavy `graph_log()` uses subprocess `git log` for exact
# IDEA-matching topo order, but enriches results with libgit2
# for ref decorations. Also used by `list_branches()`,
# `first_parent_chain()`, and `detect_default_branch()`.
git2 = { version = "0.19", default-features = false }

# Markdown → HTML renderer for the local Markdown preview
# panel (M5e). `pulldown-cmark` is the reference CommonMark
# implementation in the Rust ecosystem; we enable a superset
# of GFM extensions (tables, strikethrough, task lists,
# footnotes) so typical README.md files render the way the
# user expects on GitHub. No HTML passthrough — we escape
# everything by default to avoid rendering untrusted HTML
# embedded in a .md file we just opened from disk.
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# MySQL client for the M5d panel. `mysql_async` is Tokio-
# based so it plugs into the shared runtime with zero extra
# work. `minimal-rust` drops the native TLS dep — pier-x's
# MySQL panel connects via an SSH tunnel to 127.0.0.1:<port>,
# so the transport is already encrypted. flate2 keeps its
# pure-Rust backend (no zlib system dep).
mysql_async = { version = "0.36", default-features = false, features = ["minimal-rust"] }

# Async runtime for russh. Only the `rt-multi-thread` + time + net
# features — we don't need full. `fs` is pulled in for the SFTP
# upload/download helpers that read/write local files from inside
# the shared runtime.
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread", "time", "net", "sync", "io-util", "macros", "fs",
] }

# Unix PTY — forkpty + ioctl wrappers live in libc. Only pulled in on
# Unix targets; Windows gets its own ConPTY-backed implementation
# (stub for now). Once the Unix impl needs safer wrappers the `nix`
# crate slots in here.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"
