[package]
name = "pier-ui-gpui"
version = "0.1.0"
edition = "2021"
description = "Native GPUI desktop shell for Pier-X"
license = "MIT"
publish = false
build = "build.rs"

[dependencies]
base64 = "0.22"
gpui = "0.2.2"
gpui-component = { path = "../forks/gpui-component-pier" }
log = "0.4"
pier-core = { path = "../pier-core" }
pulldown-cmark = { version = "0.13", default-features = false }
rust-i18n = "3"

[build-dependencies]
embed-resource = "3.0.8"
